# Lab-07-http-server

./: CMakeLists.txt  suggestions.json
include/: InputJson.hpp  JsonSuggestions .hpp
sources/: InputJson.cpp  JsonSuggestions.cpp  source.cpp
tests/: test.cpp
